--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,7 @@ section {
 .nav-link.current {
     position: relative;
     color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link.current::after {
@@ -168,6 +169,12 @@ section {
 
     color: #434455;
 }
+
+.address-link:nth-of-type(1),
+.address-link:nth-of-type(2) {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .address-link:hover,
 .address-link:focus {
     color: #404bbf;
