--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,36 @@ section {
     text-align: center;
 }
 
+.social-icons-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.social-icons-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-icons-link:hover,
+.social-icons-link:focus {
+    background-color: #404bbf;
+}
+
+.social-icon-round {
+    fill: #f4f4fd;
+}
+
+.social-icons {
+    width: 40px;
+    height: 40px;
+}
+
 /* ======================== section-portfolio #4 === */
 
 .portfolio-title {
