--- a/css/styles.css
+++ b/css/styles.css
@@ -354,12 +354,12 @@ section {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item-image {
+.portfolio-banner {
     position: relative;
     overflow: hidden;
 }
 
-.portfolio-item-image-text {
+.portfolio-banner-text {
     position: absolute;
     top: 0;
     font-size: 16px;
