fixing v0.4 git push
quit

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,6 +354,11 @@ section {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-image {
+    position: relative;
+    overflow: hidden;
+}
+
 .portfolio-banner {
     position: relative;
     overflow: hidden;
@@ -375,7 +380,7 @@ section {
 
 }
 
-.portfolio-item:hover .portfolio-text {
+.portfolio-item:hover .portfolio-banner-text {
     transform: translateY(0%);
 }
 
