--- a/css/styles.css
+++ b/css/styles.css
@@ -410,6 +410,12 @@ section {
     padding: 100px 0;
 }
 
+.footer-wrapper {
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+}
+
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;
@@ -428,4 +434,41 @@ section {
     color: #f4f4fd;
 }
 
+.footer-nav-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-nav {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-nav-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-nav-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-nav-link:hover,
+.footer-nav-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-icon {
+    fill: #f4f4fd;
+}
 
