--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,9 @@ section {
 .footer-wrapper {
     display: flex;
     align-items: baseline;
+}
+
+.footer-info {
     margin-right: 120px;
 }
 
@@ -461,6 +464,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-nav-link:hover,
