--- a/css/styles.css
+++ b/css/styles.css
@@ -410,8 +410,14 @@ section {
     padding: 100px 0;
 }
 
+.footer .container {
+    display: flex;
+    align-items: baseline;
+}
+
 .footer-wrapper {
     display: flex;
+    flex-direction: column;
     align-items: baseline;
     margin-right: 120px;
 }
@@ -428,11 +434,16 @@ section {
 
 .footer-text {
     max-width: 264px;
-
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+}
+
+.footer-social {
+    flex-direction: column;
+    gap: 16px;
+    width: 208px;
 }
 
 .footer-nav-text {
